# subdotko

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  subdotko.py
fingerprints/: custom_acquia.yml  custom_activecampaign.yml  custom_firstpromoter.yml  custom_flowlu.yml  custom_hashnode.yml  custom_jazzhr.yml  custom_kinsta.yml  custom_makeswift.yml  custom_marathon.yml  custom_niceboard.yml  custom_ohdear.yml  custom_siteleaf.yml  custom_super_so.yml  custom_surveygizmo.yml  custom_tave.yml  custom_theneo.yml  custom_tictail.yml  custom_unbounce.yml
subdotko/: __init__.py  blacklists.txt  cli.py  resolver.py  scanner.py  subdotko.py  utils.py
subdotko/fingerprints/: custom_appwrite.yml  custom_braincert.yml  custom_featurebase.yml  custom_feedpress.yml  custom_frill.yml  custom_helpkit.yml  custom_heyflow.yml  custom_ideanote.yml  custom_instapage.yml  custom_instatus.yml  custom_landingi.yml  custom_nolt.yml  custom_sleekplan.yml  custom_sniply.yml  custom_testimonial.yml  custom_upvoty.yml  custom_worksome.yml
