[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subdotko"
version = "1.0.0"
description = "Subdomain Takeover Scanner - Fingerprint-based subdomain takeover detection tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fajar"}
]
keywords = ["subdomain", "takeover", "security", "scanner", "dns"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "dnspython",
    "requests",
    "pyyaml",
    "rich",
    "urllib3",
]

[project.scripts]
subdotko = "subdotko:main"

[project.urls]
Homepage = "https://github.com/pajarori/subdotko"
Repository = "https://github.com/pajarori/subdotko"

[tool.setuptools]
py-modules = ["subdotko"]

[tool.setuptools.package-data]
"*" = ["fingerprints/*.yml", "blacklists.txt"]
