[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subdotko"
version = "1.3.0"
description = "Subdomain Takeover Scanner - Fingerprint-based subdomain takeover detection tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "pajarori" }]
keywords = ["subdomain", "takeover", "security", "scanner", "dns"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = ["dnspython", "httpx", "pyyaml", "rich", "tldextract"]

[project.scripts]
subdotko = "subdotko.cli:main"

[project.urls]
Homepage = "https://github.com/pajarori/subdotko"
Repository = "https://github.com/pajarori/subdotko"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
subdotko = ["fingerprints/*.yml", "blacklists.txt"]
